<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="la.hackspace.coreupgrade.davidsmz.miprimeraaplicacion.LoginActivity"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/nombre"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/apellido"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/edad"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/dni"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ingresar"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:id="@+id/button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arbol"
        android:contentDescription="@string/descripcion1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView" />


</LinearLayout>
